AB#689 fix : show ado elements properly if they are html + detect content while fetching details + remove item if integration returns 404 for its details , update FE
